Changed based on review comments
