# app/controllers/api/v1x0/requests_controller.rb
@@ -28,7 +28,7 @@ module Api
       private
 
       def request_params
-        params.permit(:name, :description, :owner, :content => {})
+        params.permit(:name, :description, :content => {})
       end
     end
   end
